--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </div>
 
 <div class="slider-group">
-<label for="duration">Tone Duration: <span id="val-duration">3</span> s</label>
-<input type="range" id="duration" min="1" max="10" value="3" step="0.1">
+<label for="duration">Tone Duration: <span id="val-duration">1</span> s</label>
+<input type="range" id="duration" min=".2" max="10" value="1" step="0.1">
 </div>
 
 <div class="slider-group">
