--- a/index.html
+++ b/index.html
@@ -1,71 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Procedural Reverb Synth</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body style="background-color: black; color: white;">
-<h1>Procedural Reverb Synth</h1>
+    <head>
+        <meta charset="UTF-8">
+        <title>Audio Testing</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body style="background-color: black; color: white;">
+        <h1>Audio Testing</h1>
 
-<div class="slider-group">
-<label for="frequency">Oscillator Frequency: <span id="val-frequency">440</span> Hz</label>
-<input type="range" id="frequency" min="100" max="1000" value="440">
-</div>
+        <section>
+            <h2>Warning Sound</h2>
+            <p>Use these buttons to test various alert tones:</p>
+            <div>
+                <button id="warn1">Warning Sound 1</button>
+                <button id="warn2">Warning Sound 2</button>
+                <button id="warn3">Warning Sound 3</button>
+                <button id="warn4">Warning Sound 4</button>
+                <button id="warn5">Warning Sound 5</button>
+            </div>
+        </section>
 
-<div class="slider-group">
-<label for="duration">Tone Duration: <span id="val-duration">1</span> s</label>
-<input type="range" id="duration" min=".2" max="10" value="1" step="0.1">
-</div>
+        <section>
+            <h2>Procedural Reverb Synth</h2>
+            <div class="slider-group">
+                <label for="frequency">Oscillator Frequency: <span id="val-frequency">440</span> Hz</label>
+                <input type="range" id="frequency" min="100" max="1000" value="440">
+            </div>
 
-<div class="slider-group">
-<label for="irDuration">Reverb Duration: <span id="val-irDuration">2</span> s</label>
-<input type="range" id="irDuration" min="0.1" max="5" value="2" step="0.1">
-</div>
+            <div class="slider-group">
+                <label for="duration">Tone Duration: <span id="val-duration">1</span> s</label>
+                <input type="range" id="duration" min=".2" max="10" value="1" step="0.1">
+            </div>
 
-<div class="slider-group">
-<label for="decay">Reverb Decay: <span id="val-decay">2.5</span></label>
-<input type="range" id="decay" min="0.1" max="10" value="2.5" step="0.1">
-</div>
+            <div class="slider-group">
+                <label for="irDuration">Reverb Duration: <span id="val-irDuration">2</span> s</label>
+                <input type="range" id="irDuration" min="0.1" max="5" value="2" step="0.1">
+            </div>
 
-<div class="slider-group">
-<label for="dry">Dry Gain: <span id="val-dry">0.6</span></label>
-<input type="range" id="dry" min="0" max="1" value="0.6" step="0.01">
-</div>
+            <div class="slider-group">
+                <label for="decay">Reverb Decay: <span id="val-decay">2.5</span></label>
+                <input type="range" id="decay" min="0.1" max="10" value="2.5" step="0.1">
+            </div>
 
-<div class="slider-group">
-<label for="wet">Wet Gain: <span id="val-wet">0.5</span></label>
-<input type="range" id="wet" min="0" max="1" value="0.5" step="0.01">
-</div>
+            <div class="slider-group">
+                <label for="dry">Dry Gain: <span id="val-dry">0.6</span></label>
+                <input type="range" id="dry" min="0" max="1" value="0.6" step="0.01">
+            </div>
 
-<button id="play">Play Tone</button>
-<button id="stop">Stop</button>
+            <div class="slider-group">
+                <label for="wet">Wet Gain: <span id="val-wet">0.5</span></label>
+                <input type="range" id="wet" min="0" max="1" value="0.5" step="0.01">
+            </div>
 
-<hr>
+            <button id="play">Play Tone</button>
+            <button id="stop">Stop</button>
 
-<section>
-<h2>About This Synth</h2>
-<p>
-This is a procedural tone generator built with the Web Audio API. It uses a sine wave oscillator as the base tone, and simulates reverb using a custom impulse response buffer (no external audio files required).
-     </p>
-     <ul>
-     <li><strong>Oscillator Frequency</strong>: sets the pitch (Hz)</li>
-     <li><strong>Tone Duration</strong>: how long the tone plays before stopping</li>
-     <li><strong>Reverb Duration</strong>: length of the reverb impulse buffer (affects fullness)</li>
-     <li><strong>Reverb Decay</strong>: how quickly the reverb fades out</li>
-     <li><strong>Dry/Wet Gain</strong>: mix between clean signal and reverb trail</li>
-     </ul>
-     <p>
-     Press <strong>Play</strong> to generate a tone with your selected settings.
-     Press <strong>Stop</strong> to immediately kill the sound and reset the context.
-     </p>
-     <p style="font-size: 0.9em; color: #aaa;">
-     Note: Some browsers may require a user gesture (like a click) to start audio.
-     </p>
-     </section>
+            <hr>
 
+            <h3>About This Synth</h3>
+            <p>
+            This is a procedural tone generator built with the Web Audio API. It uses a sine wave oscillator as the base tone, and simulates reverb using a custom impulse response buffer (no external audio files required).
+            </p>
+            <ul>
+                <li><strong>Oscillator Frequency</strong>: sets the pitch (Hz)</li>
+                <li><strong>Tone Duration</strong>: how long the tone plays before stopping</li>
+                <li><strong>Reverb Duration</strong>: length of the reverb impulse buffer (affects fullness)</li>
+                <li><strong>Reverb Decay</strong>: how quickly the reverb fades out</li>
+                <li><strong>Dry/Wet Gain</strong>: mix between clean signal and reverb trail</li>
+            </ul>
+            <p>
+            Press <strong>Play</strong> to generate a tone with your selected settings.
+            Press <strong>Stop</strong> to immediately kill the sound and reset the context.
+            </p>
+            <p style="font-size: 0.9em; color: #aaa;">
+            Note: Some browsers may require a user gesture (like a click) to start audio.
+            </p>
+        </section>
 
-     <script src="main.js"></script>
-     </body>
-     </html>
+        <script src="main.js"></script>
+        <script src="warningsounds.js"></script>
+    </body>
+</html>
 
